AUGREL/src/objects/SfActivity__x.object
<CustomObject>
    <description>SfActivity</description>
    <externalDataSource>ODataService</externalDataSource>
    <externalName>SfActivity</externalName>
    <fields>
        <fullName>abbreviatedConsentC__c</fullName>
        <description>abbreviatedConsentC</description>
        <externalDeveloperName>abbreviatedConsentC</externalDeveloperName>
        <label>abbreviatedConsentC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abbreviatedConsentDateC__c</fullName>
        <description>abbreviatedConsentDateC</description>
        <externalDeveloperName>abbreviatedConsentDateC</externalDeveloperName>
        <label>abbreviatedConsentDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>accountIdC__c</fullName>
        <description>accountIdC</description>
        <externalDeveloperName>accountIdC</externalDeveloperName>
        <label>accountIdC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionC__c</fullName>
        <description>actionC</description>
        <externalDeveloperName>actionC</externalDeveloperName>
        <label>actionC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addressTypeC__c</fullName>
        <description>addressTypeC</description>
        <externalDeveloperName>addressTypeC</externalDeveloperName>
        <label>addressTypeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affiliateMarketingPrivacyC__c</fullName>
        <description>affiliateMarketingPrivacyC</description>
        <externalDeveloperName>affiliateMarketingPrivacyC</externalDeveloperName>
        <label>affiliateMarketingPrivacyC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>allPrivacyOptionsC__c</fullName>
        <description>allPrivacyOptionsC</description>
        <externalDeveloperName>allPrivacyOptionsC</externalDeveloperName>
        <label>allPrivacyOptionsC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingZipCodeExtnC__c</fullName>
        <description>billingZipCodeExtnC</description>
        <externalDeveloperName>billingZipCodeExtnC</externalDeveloperName>
        <label>billingZipCodeExtnC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseActionC__c</fullName>
        <description>caseActionC</description>
        <externalDeveloperName>caseActionC</externalDeveloperName>
        <label>caseActionC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseC__c</fullName>
        <description>caseC</description>
        <externalDeveloperName>caseC</externalDeveloperName>
        <label>caseC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseCategoryC__c</fullName>
        <description>caseCategoryC</description>
        <externalDeveloperName>caseCategoryC</externalDeveloperName>
        <label>caseCategoryC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseNumber__c</fullName>
        <description>caseNumber</description>
        <externalDeveloperName>caseNumber</externalDeveloperName>
        <label>caseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseTopicC__c</fullName>
        <description>caseTopicC</description>
        <externalDeveloperName>caseTopicC</externalDeveloperName>
        <label>caseTopicC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>categoryC__c</fullName>
        <description>categoryC</description>
        <externalDeveloperName>categoryC</externalDeveloperName>
        <label>categoryC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>certifiedUsedC__c</fullName>
        <description>certifiedUsedC</description>
        <externalDeveloperName>certifiedUsedC</externalDeveloperName>
        <label>certifiedUsedC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>confirmationNumberC__c</fullName>
        <description>confirmationNumberC</description>
        <externalDeveloperName>confirmationNumberC</externalDeveloperName>
        <label>confirmationNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactIdC__c</fullName>
        <description>contactIdC</description>
        <externalDeveloperName>contactIdC</externalDeveloperName>
        <label>contactIdC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdById__c</fullName>
        <description>createdById</description>
        <externalDeveloperName>createdById</externalDeveloperName>
        <label>createdById</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>createdDate</description>
        <externalDeveloperName>createdDate</externalDeveloperName>
        <label>createdDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>creditAppReportingPrivacyC__c</fullName>
        <description>creditAppReportingPrivacyC</description>
        <externalDeveloperName>creditAppReportingPrivacyC</externalDeveloperName>
        <label>creditAppReportingPrivacyC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentAddressC__c</fullName>
        <description>currentAddressC</description>
        <externalDeveloperName>currentAddressC</externalDeveloperName>
        <label>currentAddressC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentAddressNameC__c</fullName>
        <description>currentAddressNameC</description>
        <externalDeveloperName>currentAddressNameC</externalDeveloperName>
        <label>currentAddressNameC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentCareOfC__c</fullName>
        <description>currentCareOfC</description>
        <externalDeveloperName>currentCareOfC</externalDeveloperName>
        <label>currentCareOfC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentCityC__c</fullName>
        <description>currentCityC</description>
        <externalDeveloperName>currentCityC</externalDeveloperName>
        <label>currentCityC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentEmailAddressC__c</fullName>
        <description>currentEmailAddressC</description>
        <externalDeveloperName>currentEmailAddressC</externalDeveloperName>
        <label>currentEmailAddressC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentHomeNumberC__c</fullName>
        <description>currentHomeNumberC</description>
        <externalDeveloperName>currentHomeNumberC</externalDeveloperName>
        <label>currentHomeNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentHomeNumberDncC__c</fullName>
        <description>currentHomeNumberDncC</description>
        <externalDeveloperName>currentHomeNumberDncC</externalDeveloperName>
        <label>currentHomeNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentHomeNumberInvalidC__c</fullName>
        <description>currentHomeNumberInvalidC</description>
        <externalDeveloperName>currentHomeNumberInvalidC</externalDeveloperName>
        <label>currentHomeNumberInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentHomeNumberMobileC__c</fullName>
        <description>currentHomeNumberMobileC</description>
        <externalDeveloperName>currentHomeNumberMobileC</externalDeveloperName>
        <label>currentHomeNumberMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentMileageC__c</fullName>
        <description>currentMileageC</description>
        <externalDeveloperName>currentMileageC</externalDeveloperName>
        <label>currentMileageC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentMobileNumInvalidC__c</fullName>
        <description>currentMobileNumInvalidC</description>
        <externalDeveloperName>currentMobileNumInvalidC</externalDeveloperName>
        <label>currentMobileNumInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentMobileNumMobileC__c</fullName>
        <description>currentMobileNumMobileC</description>
        <externalDeveloperName>currentMobileNumMobileC</externalDeveloperName>
        <label>currentMobileNumMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentMobileNumberC__c</fullName>
        <description>currentMobileNumberC</description>
        <externalDeveloperName>currentMobileNumberC</externalDeveloperName>
        <label>currentMobileNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentMobileNumberDncC__c</fullName>
        <description>currentMobileNumberDncC</description>
        <externalDeveloperName>currentMobileNumberDncC</externalDeveloperName>
        <label>currentMobileNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentServicingEmailC__c</fullName>
        <description>currentServicingEmailC</description>
        <externalDeveloperName>currentServicingEmailC</externalDeveloperName>
        <label>currentServicingEmailC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentStateC__c</fullName>
        <description>currentStateC</description>
        <externalDeveloperName>currentStateC</externalDeveloperName>
        <label>currentStateC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentWorkNumberC__c</fullName>
        <description>currentWorkNumberC</description>
        <externalDeveloperName>currentWorkNumberC</externalDeveloperName>
        <label>currentWorkNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentWorkNumberDncC__c</fullName>
        <description>currentWorkNumberDncC</description>
        <externalDeveloperName>currentWorkNumberDncC</externalDeveloperName>
        <label>currentWorkNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentWorkNumberInvalidC__c</fullName>
        <description>currentWorkNumberInvalidC</description>
        <externalDeveloperName>currentWorkNumberInvalidC</externalDeveloperName>
        <label>currentWorkNumberInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentWorkNumberMobileC__c</fullName>
        <description>currentWorkNumberMobileC</description>
        <externalDeveloperName>currentWorkNumberMobileC</externalDeveloperName>
        <label>currentWorkNumberMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentZipCodeC__c</fullName>
        <description>currentZipCodeC</description>
        <externalDeveloperName>currentZipCodeC</externalDeveloperName>
        <label>currentZipCodeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentZipCodeExtnC__c</fullName>
        <description>currentZipCodeExtnC</description>
        <externalDeveloperName>currentZipCodeExtnC</externalDeveloperName>
        <label>currentZipCodeExtnC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dealerC__c</fullName>
        <description>dealerC</description>
        <externalDeveloperName>dealerC</externalDeveloperName>
        <label>dealerC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>descriptionC__c</fullName>
        <description>descriptionC</description>
        <externalDeveloperName>descriptionC</externalDeveloperName>
        <label>descriptionC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>electronicBusnAgreemntC__c</fullName>
        <description>electronicBusnAgreemntC</description>
        <externalDeveloperName>electronicBusnAgreemntC</externalDeveloperName>
        <label>electronicBusnAgreemntC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>electronicBusnAgreemntDtC__c</fullName>
        <description>electronicBusnAgreemntDtC</description>
        <externalDeveloperName>electronicBusnAgreemntDtC</externalDeveloperName>
        <label>electronicBusnAgreemntDtC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>financialAccountC__c</fullName>
        <description>financialAccountC</description>
        <externalDeveloperName>financialAccountC</externalDeveloperName>
        <label>financialAccountC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialAccountCustomerC__c</fullName>
        <description>financialAccountCustomerC</description>
        <externalDeveloperName>financialAccountCustomerC</externalDeveloperName>
        <label>financialAccountCustomerC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialAccountNumberC__c</fullName>
        <description>financialAccountNumberC</description>
        <externalDeveloperName>financialAccountNumberC</externalDeveloperName>
        <label>financialAccountNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialAcountCustIdC__c</fullName>
        <description>financialAcountCustIdC</description>
        <externalDeveloperName>financialAcountCustIdC</externalDeveloperName>
        <label>financialAcountCustIdC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>garageZipCodeExtnC__c</fullName>
        <description>garageZipCodeExtnC</description>
        <externalDeveloperName>garageZipCodeExtnC</externalDeveloperName>
        <label>garageZipCodeExtnC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>goodThruDateC__c</fullName>
        <description>goodThruDateC</description>
        <externalDeveloperName>goodThruDateC</externalDeveloperName>
        <label>goodThruDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grossPayOffC__c</fullName>
        <description>grossPayOffC</description>
        <externalDeveloperName>grossPayOffC</externalDeveloperName>
        <label>grossPayOffC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>immediateActionC__c</fullName>
        <description>immediateActionC</description>
        <externalDeveloperName>immediateActionC</externalDeveloperName>
        <label>immediateActionC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>integrationIdC__c</fullName>
        <description>integrationIdC</description>
        <externalDeveloperName>integrationIdC</externalDeveloperName>
        <label>integrationIdC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>languagePreferenceC__c</fullName>
        <description>languagePreferenceC</description>
        <externalDeveloperName>languagePreferenceC</externalDeveloperName>
        <label>languagePreferenceC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastModifiedById__c</fullName>
        <description>lastModifiedById</description>
        <externalDeveloperName>lastModifiedById</externalDeveloperName>
        <label>lastModifiedById</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastModifiedByLanIdC__c</fullName>
        <description>lastModifiedByLanIdC</description>
        <externalDeveloperName>lastModifiedByLanIdC</externalDeveloperName>
        <label>lastModifiedByLanIdC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastModifiedDate__c</fullName>
        <description>lastModifiedDate</description>
        <externalDeveloperName>lastModifiedDate</externalDeveloperName>
        <label>lastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>makeC__c</fullName>
        <description>makeC</description>
        <externalDeveloperName>makeC</externalDeveloperName>
        <label>makeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketingCommPrefEmailC__c</fullName>
        <description>marketingCommPrefEmailC</description>
        <externalDeveloperName>marketingCommPrefEmailC</externalDeveloperName>
        <label>marketingCommPrefEmailC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketingCommPrefHomePhnC__c</fullName>
        <description>marketingCommPrefHomePhnC</description>
        <externalDeveloperName>marketingCommPrefHomePhnC</externalDeveloperName>
        <label>marketingCommPrefHomePhnC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketingCommPrefTextC__c</fullName>
        <description>marketingCommPrefTextC</description>
        <externalDeveloperName>marketingCommPrefTextC</externalDeveloperName>
        <label>marketingCommPrefTextC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketingCommPrefWorkPhnC__c</fullName>
        <description>marketingCommPrefWorkPhnC</description>
        <externalDeveloperName>marketingCommPrefWorkPhnC</externalDeveloperName>
        <label>marketingCommPrefWorkPhnC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marktingCommPrefMobPhnC__c</fullName>
        <description>marktingCommPrefMobPhnC</description>
        <externalDeveloperName>marktingCommPrefMobPhnC</externalDeveloperName>
        <label>marktingCommPrefMobPhnC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newAddressC__c</fullName>
        <description>newAddressC</description>
        <externalDeveloperName>newAddressC</externalDeveloperName>
        <label>newAddressC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newAddressNameC__c</fullName>
        <description>newAddressNameC</description>
        <externalDeveloperName>newAddressNameC</externalDeveloperName>
        <label>newAddressNameC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newCareOfC__c</fullName>
        <description>newCareOfC</description>
        <externalDeveloperName>newCareOfC</externalDeveloperName>
        <label>newCareOfC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newCityC__c</fullName>
        <description>newCityC</description>
        <externalDeveloperName>newCityC</externalDeveloperName>
        <label>newCityC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newEmailAddressC__c</fullName>
        <description>newEmailAddressC</description>
        <externalDeveloperName>newEmailAddressC</externalDeveloperName>
        <label>newEmailAddressC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newHomeNumberC__c</fullName>
        <description>newHomeNumberC</description>
        <externalDeveloperName>newHomeNumberC</externalDeveloperName>
        <label>newHomeNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newHomeNumberDncC__c</fullName>
        <description>newHomeNumberDncC</description>
        <externalDeveloperName>newHomeNumberDncC</externalDeveloperName>
        <label>newHomeNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newHomeNumberInvalidC__c</fullName>
        <description>newHomeNumberInvalidC</description>
        <externalDeveloperName>newHomeNumberInvalidC</externalDeveloperName>
        <label>newHomeNumberInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newHomeNumberMobileC__c</fullName>
        <description>newHomeNumberMobileC</description>
        <externalDeveloperName>newHomeNumberMobileC</externalDeveloperName>
        <label>newHomeNumberMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newMobileNumberC__c</fullName>
        <description>newMobileNumberC</description>
        <externalDeveloperName>newMobileNumberC</externalDeveloperName>
        <label>newMobileNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newMobileNumberDncC__c</fullName>
        <description>newMobileNumberDncC</description>
        <externalDeveloperName>newMobileNumberDncC</externalDeveloperName>
        <label>newMobileNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newMobileNumberInvalidC__c</fullName>
        <description>newMobileNumberInvalidC</description>
        <externalDeveloperName>newMobileNumberInvalidC</externalDeveloperName>
        <label>newMobileNumberInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newMobileNumberMobileC__c</fullName>
        <description>newMobileNumberMobileC</description>
        <externalDeveloperName>newMobileNumberMobileC</externalDeveloperName>
        <label>newMobileNumberMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newServicingEmailC__c</fullName>
        <description>newServicingEmailC</description>
        <externalDeveloperName>newServicingEmailC</externalDeveloperName>
        <label>newServicingEmailC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newStateC__c</fullName>
        <description>newStateC</description>
        <externalDeveloperName>newStateC</externalDeveloperName>
        <label>newStateC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newWorkNumberC__c</fullName>
        <description>newWorkNumberC</description>
        <externalDeveloperName>newWorkNumberC</externalDeveloperName>
        <label>newWorkNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newWorkNumberDncC__c</fullName>
        <description>newWorkNumberDncC</description>
        <externalDeveloperName>newWorkNumberDncC</externalDeveloperName>
        <label>newWorkNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newWorkNumberInvalidC__c</fullName>
        <description>newWorkNumberInvalidC</description>
        <externalDeveloperName>newWorkNumberInvalidC</externalDeveloperName>
        <label>newWorkNumberInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newWorkNumberMobileC__c</fullName>
        <description>newWorkNumberMobileC</description>
        <externalDeveloperName>newWorkNumberMobileC</externalDeveloperName>
        <label>newWorkNumberMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newZipCodeC__c</fullName>
        <description>newZipCodeC</description>
        <externalDeveloperName>newZipCodeC</externalDeveloperName>
        <label>newZipCodeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newZipCodeExtnC__c</fullName>
        <description>newZipCodeExtnC</description>
        <externalDeveloperName>newZipCodeExtnC</externalDeveloperName>
        <label>newZipCodeExtnC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>onlineFlagC__c</fullName>
        <description>onlineFlagC</description>
        <externalDeveloperName>onlineFlagC</externalDeveloperName>
        <label>onlineFlagC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>originalPaymentDateC__c</fullName>
        <description>originalPaymentDateC</description>
        <externalDeveloperName>originalPaymentDateC</externalDeveloperName>
        <label>originalPaymentDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>overallConsentC__c</fullName>
        <description>overallConsentC</description>
        <externalDeveloperName>overallConsentC</externalDeveloperName>
        <label>overallConsentC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payOffQuoteC__c</fullName>
        <description>payOffQuoteC</description>
        <externalDeveloperName>payOffQuoteC</externalDeveloperName>
        <label>payOffQuoteC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>paymentAmountC__c</fullName>
        <description>paymentAmountC</description>
        <externalDeveloperName>paymentAmountC</externalDeveloperName>
        <label>paymentAmountC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>paymentDateC__c</fullName>
        <description>paymentDateC</description>
        <externalDeveloperName>paymentDateC</externalDeveloperName>
        <label>paymentDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>paymentNotReceivedEmailC__c</fullName>
        <description>paymentNotReceivedEmailC</description>
        <externalDeveloperName>paymentNotReceivedEmailC</externalDeveloperName>
        <label>paymentNotReceivedEmailC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentNotReceivedTextC__c</fullName>
        <description>paymentNotReceivedTextC</description>
        <externalDeveloperName>paymentNotReceivedTextC</externalDeveloperName>
        <label>paymentNotReceivedTextC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentReceivedEmailC__c</fullName>
        <description>paymentReceivedEmailC</description>
        <externalDeveloperName>paymentReceivedEmailC</externalDeveloperName>
        <label>paymentReceivedEmailC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentReceivedTextC__c</fullName>
        <description>paymentReceivedTextC</description>
        <externalDeveloperName>paymentReceivedTextC</externalDeveloperName>
        <label>paymentReceivedTextC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentReminderDayC__c</fullName>
        <description>paymentReminderDayC</description>
        <externalDeveloperName>paymentReminderDayC</externalDeveloperName>
        <label>paymentReminderDayC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentReminderEmailC__c</fullName>
        <description>paymentReminderEmailC</description>
        <externalDeveloperName>paymentReminderEmailC</externalDeveloperName>
        <label>paymentReminderEmailC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentReminderTextC__c</fullName>
        <description>paymentReminderTextC</description>
        <externalDeveloperName>paymentReminderTextC</externalDeveloperName>
        <label>paymentReminderTextC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>perDiemC__c</fullName>
        <description>perDiemC</description>
        <externalDeveloperName>perDiemC</externalDeveloperName>
        <label>perDiemC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>preferredContactC__c</fullName>
        <description>preferredContactC</description>
        <externalDeveloperName>preferredContactC</externalDeveloperName>
        <label>preferredContactC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>processDateC__c</fullName>
        <description>processDateC</description>
        <externalDeveloperName>processDateC</externalDeveloperName>
        <label>processDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>processingAssociateC__c</fullName>
        <description>processingAssociateC</description>
        <externalDeveloperName>processingAssociateC</externalDeveloperName>
        <label>processingAssociateC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>programIC__c</fullName>
        <description>programIC</description>
        <externalDeveloperName>programIC</externalDeveloperName>
        <label>programIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>programIIC__c</fullName>
        <description>programIIC</description>
        <externalDeveloperName>programIIC</externalDeveloperName>
        <label>programIIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>programIIIC__c</fullName>
        <description>programIIIC</description>
        <externalDeveloperName>programIIIC</externalDeveloperName>
        <label>programIIIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purchaseOptC__c</fullName>
        <description>purchaseOptC</description>
        <externalDeveloperName>purchaseOptC</externalDeveloperName>
        <label>purchaseOptC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quotedToC__c</fullName>
        <description>quotedToC</description>
        <externalDeveloperName>quotedToC</externalDeveloperName>
        <label>quotedToC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordTypeId__c</fullName>
        <description>recordTypeId</description>
        <externalDeveloperName>recordTypeId</externalDeveloperName>
        <label>recordTypeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>refundAmountC__c</fullName>
        <description>refundAmountC</description>
        <externalDeveloperName>refundAmountC</externalDeveloperName>
        <label>refundAmountC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>residualValueC__c</fullName>
        <description>residualValueC</description>
        <externalDeveloperName>residualValueC</externalDeveloperName>
        <label>residualValueC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>serviceRecipientC__c</fullName>
        <description>serviceRecipientC</description>
        <externalDeveloperName>serviceRecipientC</externalDeveloperName>
        <label>serviceRecipientC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceRequestCategoryC__c</fullName>
        <description>serviceRequestCategoryC</description>
        <externalDeveloperName>serviceRequestCategoryC</externalDeveloperName>
        <label>serviceRequestCategoryC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceRequestTypeC__c</fullName>
        <description>serviceRequestTypeC</description>
        <externalDeveloperName>serviceRequestTypeC</externalDeveloperName>
        <label>serviceRequestTypeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceRequestUserGroupC__c</fullName>
        <description>serviceRequestUserGroupC</description>
        <externalDeveloperName>serviceRequestUserGroupC</externalDeveloperName>
        <label>serviceRequestUserGroupC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceResultC__c</fullName>
        <description>serviceResultC</description>
        <externalDeveloperName>serviceResultC</externalDeveloperName>
        <label>serviceResultC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>